--- a/.travis.yml
+++ b/.travis.yml
@@ -7,6 +7,7 @@ install:
   - pip install -r requirements.txt
 # command to run tests
 script:
+  - cd src/chatbot
   - pytest --flake8
 # disable notifications
 notifications:
