Multiple Subreddits, use Message Class, Cleaner scoping:

--- a/src/chatbot/config/default.config
+++ b/src/chatbot/config/default.config
@@ -1,4 +1,26 @@
 {
     "bravery": "0.5",
-    "vocab_path": "vocab"
+    "vocab_path": "vocab",
+    "random_function_call_pdf": {
+        "mad_lib": "0",
+        "spongebob_mock": "0",
+        "post_meme": "4"
+    },
+    "subreddits": {
+        "me_irl": "20",
+        "cursedImages": "5",
+        "EggsInStrangePlaces": "5",
+        "blessedImages": "1",
+        "blursedImages": "5",
+        "bruhmoment": "1",
+        "BoneHurtingJuice": "3",
+        "wholesomememes": "10",
+        "2meirl4meirl": "10",
+        "WhitePeopleTwitter": "5",
+        "cursedcomments": "10",
+        "ThanosDidNothingWrong": "15",
+        "pornhubcomments": "25",
+        "SurrealMemes": "5",
+        "rowing": "5"
+    }
 }
