--- a/src/chatbot/config/hubc.config
+++ b/src/chatbot/config/hubc.config
@@ -1,6 +1,6 @@
 {
     "bravery": "0.5",
-    "vocab_path": "vocab",
+    "vocab_path": "vocab/hubc",
     "random_function_call_pdf": {
         "mad_lib": "4",
         "spongebob_mock": "1",
