Add cross map functionality

--- a/src/chatbot/config/hubc.config
+++ b/src/chatbot/config/hubc.config
@@ -2,25 +2,28 @@
     "bravery": "0.5",
     "vocab_path": "vocab/hubc",
     "random_function_call_pdf": {
-        "mad_lib": "4",
+        "mad_lib": "3",
         "spongebob_mock": "1",
-        "post_meme": "5"
+        "post_meme": "4",
+        "cross_map": "3"
     },
     "subreddits": {
-        "me_irl": "15",
-        "cursedImages": "10",
-        "EggsInStrangePlaces": "5",
-        "blessedImages": "1",
-        "blursedImages": "5",
-        "bruhmoment": "3",
-        "BoneHurtingJuice": "3",
-        "wholesomememes": "10",
+        "me_irl": "10",
+        "cursedImages": "15",
+        "EggsInStrangePlaces": "1",
+        "blessedImages": "0",
+        "blursedImages": "0",
+        "bruhmoment": "5",
+        "BoneHurtingJuice": "10",
+        "wholesomememes": "5",
         "2meirl4meirl": "10",
         "WhitePeopleTwitter": "5",
-        "cursedcomments": "10",
+        "cursedcomments": "15",
         "ThanosDidNothingWrong": "15",
-        "pornhubcomments": "25",
-        "SurrealMemes": "5",
-        "rowing": "5"
+        "pornhubcomments": "20",
+        "SurrealMemes": "10",
+        "rowing": "5",
+        "dankmemes": "15",
+        "imsorryjon": "5"
     }
 }
