--- a/src/chatbot/config/default.config
+++ b/src/chatbot/config/default.config
@@ -4,7 +4,8 @@
     "random_function_call_pdf": {
         "mad_lib": "5",
         "spongebob_mock": "1",
-        "post_meme": "4"
+        "post_meme": "4",
+        "cross_map": "1"
     },
     "subreddits": {
         "me_irl": "15",
