Make random memes basic

--- a/src/chatbot/config/hubc.config
+++ b/src/chatbot/config/hubc.config
@@ -5,7 +5,8 @@
         "mad_lib": "3",
         "spongebob_mock": "1",
         "post_meme": "4",
-        "cross_map": "3"
+        "cross_map": "3",
+        "create_meme": "2"
     },
     "subreddits": {
         "me_irl": "10",
