--- a/src/chatbot/config/default.config
+++ b/src/chatbot/config/default.config
@@ -5,7 +5,8 @@
         "mad_lib": "5",
         "spongebob_mock": "1",
         "post_meme": "4",
-        "cross_map": "1"
+        "cross_map": "1",
+        "create_meme": "2"
     },
     "subreddits": {
         "me_irl": "15",
