randint in callback URL

--- a/src/chatbot/config/default.config
+++ b/src/chatbot/config/default.config
@@ -1,6 +1,6 @@
 {
     "bravery": "0.5",
-    "vocab_path": "vocab/default",
+    "vocab": "default",
     "random_function_call_pdf": {
         "mad_lib": "5",
         "spongebob_mock": "1",
