Implement Reddit Roast

--- a/src/chatbot/config/default.config
+++ b/src/chatbot/config/default.config
@@ -6,7 +6,8 @@
         "spongebob_mock": "1",
         "post_meme": "4",
         "cross_map": "1",
-        "create_meme": "2"
+        "create_meme": "0",
+        "reddit_roast": "4"
     },
     "subreddits": {
         "me_irl": "15",
