--- a/src/chatbot/config/hubc.config
+++ b/src/chatbot/config/hubc.config
@@ -2,11 +2,12 @@
     "bravery": "0.1",
     "vocab": "hubc",
     "random_function_call_pdf": {
-        "mad_lib": "5",
+        "mad_lib": "4",
         "spongebob_mock": "1",
         "post_meme": "4",
         "cross_map": "4",
-        "create_meme": "0"
+        "create_meme": "0",
+        "reddit_roast": "3"
     },
     "subreddits": {
         "me_irl": "0",
