--- a/requirements.txt
+++ b/requirements.txt
@@ -16,6 +16,8 @@ mccabe==0.6.1
 more-itertools==7.2.0
 packaging==19.2
 pluggy==0.13.0
+praw==6.4.0
+prawcore==1.0.1
 py==1.8.0
 pycodestyle==2.5.0
 pyflakes==2.1.1
@@ -24,7 +26,9 @@ pytest==5.2.2
 pytest-flake8==1.0.4
 requests==2.22.0
 six==1.13.0
+update-checker==0.16
 urllib3==1.25.6
 wcwidth==0.1.7
+websocket-client==0.56.0
 Werkzeug==0.16.0
 zipp==0.6.0
