--- a/src/chatbot/config/default.config
+++ b/src/chatbot/config/default.config
@@ -2,28 +2,14 @@
     "bravery": "0.5",
     "vocab": "default",
     "random_function_call_pdf": {
-        "mad_lib": "5",
-        "spongebob_mock": "1",
-        "post_meme": "4",
-        "cross_map": "1",
+        "mad_lib": "0",
+        "spongebob_mock": "0",
+        "post_meme": "1",
+        "cross_map": "0",
         "create_meme": "0",
-        "reddit_roast": "4"
+        "reddit_roast": "0"
     },
     "subreddits": {
-        "me_irl": "15",
-        "cursedImages": "10",
-        "EggsInStrangePlaces": "5",
-        "blessedImages": "1",
-        "blursedImages": "5",
-        "bruhmoment": "3",
-        "BoneHurtingJuice": "3",
-        "wholesomememes": "10",
-        "2meirl4meirl": "10",
-        "WhitePeopleTwitter": "5",
-        "cursedcomments": "10",
-        "ThanosDidNothingWrong": "15",
-        "pornhubcomments": "25",
-        "SurrealMemes": "5",
-        "rowing": "5"
+        "me_irl": "1"
     }
 }
