Remove cross map and reddit roast functionality

--- a/src/chatbot/config/default.config
+++ b/src/chatbot/config/default.config
@@ -2,11 +2,9 @@
     "bravery": "0.5",
     "vocab": "default",
     "random_function_call_pdf": {
-        "mad_lib": "0",
-        "spongebob_mock": "0",
-        "post_meme": "1",
-        "cross_map": "0",
-        "reddit_roast": "0"
+        "mad_lib": "1",
+        "spongebob_mock": "1",
+        "post_meme": "1"
     },
     "subreddits": {
         "me_irl": "1"
